tests/valid/definite/ListElemOf_Valid_1.whiley
void System::main([string] args):
     xs = [1,2,3,3,3,4]
     if 1 ∈ xs:
         print str(1)
     if 5 in xs:
         print str(5)
  

