tests/invalid/simple/ListElemOf_CompileFail_1.whiley
void System::main([string] args):
    xs = [1,2,3]
    if(1.0 ∈ xs):
        print str(1)
